--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ httpx==0.24.1
 idna==3.4
 magic-filter==1.0.9
 multidict==6.0.4
+psycopg2-binary==2.9.7
 pydantic==2.1.1
 pydantic_core==2.4.0
 python-dotenv==1.0.0
@@ -27,4 +28,3 @@ sniffio==1.3.0
 SQLAlchemy==2.0.16
 typing_extensions==4.6.3
 yarl==1.9.2
-psycopg2-binary
