--- a/requirements.txt
+++ b/requirements.txt
@@ -10,20 +10,31 @@ Babel==2.9.1
 certifi==2023.7.22
 charset-normalizer==3.1.0
 clients==1.4
+contourpy==1.1.1
+cycler==0.12.0
 emoji==2.6.0
 exceptiongroup==1.1.1
+fonttools==4.43.0
 frozenlist==1.3.3
 h11==0.14.0
 httpcore==0.17.2
 httpx==0.24.1
 idna==3.4
+kiwisolver==1.4.5
 magic-filter==1.0.9
+matplotlib==3.8.0
 multidict==6.0.4
+numpy==1.26.0
+packaging==23.1
+Pillow==10.0.1
 psycopg2-binary==2.9.7
 pydantic==2.1.1
 pydantic_core==2.4.0
+pyparsing==3.1.1
+python-dateutil==2.8.2
 python-dotenv==1.0.0
 pytz==2023.3
+six==1.16.0
 sniffio==1.3.0
 SQLAlchemy==2.0.16
 typing_extensions==4.6.3
